--- a/styles.css
+++ b/styles.css
@@ -50,12 +50,22 @@ body{
     font-size: 34px;
     color: #4E47FF;
 }
-.nav-btn{
+.primary-btn{
     padding: 12px 36px;
     color: white;
     background-color: #4E47FF;
     border-radius: 10px;
     border: none;
+    transition: 0.5s;
+}
+.primary-btn:hover{
+    padding: 12px 36px;
+    color: rgb(0, 0, 0);
+    background-color: #e0e40e;
+    border-radius: 10px;
+    border: none;
+    transform: scale(1.1);
+    
 }
 
 /* BANNER-SECTION */
@@ -88,7 +98,7 @@ main{
     height: 328px;
     width: 1140px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
      margin-top: 116px;
 }
@@ -145,4 +155,55 @@ margin-top: 116px
     font-weight:700 ;
     font-size: 20px;
     color: rgb(0,0,0,50%);
+}
+
+/* FEEDBACK SECTION */
+.feeback-container{
+    height: 342px;
+    width: 1140px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+   margin-top: 50px;
+    
+}
+.feedback-title{
+    text-align: center;
+}
+.card-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin-top: 50px;
+}
+.reviewr-section{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.reviews-user-container{
+    height: 230px;
+    width: 310px;
+    display: flex;
+    justify-content: center;
+    align-items:flex-start;
+    flex-direction: column;
+    gap: 24px;
+    padding: 0px 24px;
+    background-color:#ffffff;
+    border-radius: 14px;
+}
+.reviewe-photo{
+    border-radius: 50%;
+}
+.name{
+    color: rgb(117,117,117,100%);
+}
+.date{
+     color: rgb(179,179,179,100%);
+}
+.reviews-name-date{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
 }
